--- a/src/app/@theme/styles/themes.scss
+++ b/src/app/@theme/styles/themes.scss
@@ -22,6 +22,53 @@ $nb-themes: nb-register-theme((
   slide-out-background: #f7f9fc,
   slide-out-shadow-color: 0 4px 14px 0 #8f9bb3,
   slide-out-shadow-color-rtl: 0 4px 14px 0 #8f9bb3,
+
+  color-primary-100: #FEE3D5,
+  color-primary-200: #FEC1AB,
+  color-primary-300: #FC9881,
+  color-primary-400: #FA7062,
+  color-primary-500: #F8312F,
+  color-primary-600: #D5222F,
+  color-primary-700: #B21730,
+  color-primary-800: #8F0E2E,
+  color-primary-900: #77092D,
+  color-success-100: #CBFED6,
+  color-success-200: #98FDB9,
+  color-success-300: #64FBA4,
+  color-success-400: #3DF79F,
+  color-success-500: #00F397,
+  color-success-600: #00D096,
+  color-success-700: #00AE8F,
+  color-success-800: #008C81,
+  color-success-900: #007274,
+  color-info-100: #CBFEF8,
+  color-info-200: #98FDF9,
+  color-info-300: #64F6FB,
+  color-info-400: #3EE4F8,
+  color-info-500: #00C7F4,
+  color-info-600: #009BD1,
+  color-info-700: #0074AF,
+  color-info-800: #00538D,
+  color-info-900: #003C75,
+  color-warning-100: #FEF9CC,
+  color-warning-200: #FDF19A,
+  color-warning-300: #FBE667,
+  color-warning-400: #F8DA41,
+  color-warning-500: #F4C804,
+  color-warning-600: #D1A702,
+  color-warning-700: #AF8902,
+  color-warning-800: #8D6B01,
+  color-warning-900: #755600,
+  color-danger-100: #FEE8D2,
+  color-danger-200: #FECBA6,
+  color-danger-300: #FDA77A,
+  color-danger-400: #FB8558,
+  color-danger-500: #F94D22,
+  color-danger-600: #D63018,
+  color-danger-700: #B31911,
+  color-danger-800: #900A0D,
+  color-danger-900: #770611
+  
 ), default, default);
 
 $nb-themes: nb-register-theme((
@@ -85,4 +132,51 @@ $nb-themes: nb-register-theme((
   slide-out-background: linear-gradient(270deg, #222b45 0%, #151a30 100%),
   slide-out-shadow-color: 0 4px 14px 0 #8f9bb3,
   slide-out-shadow-color-rtl: 0 4px 14px 0 #8f9bb3,
+
+  color-primary-100: #FEE3D5,
+  color-primary-200: #FEC1AB,
+  color-primary-300: #FC9881,
+  color-primary-400: #FA7062,
+  color-primary-500: #F8312F,
+  color-primary-600: #D5222F,
+  color-primary-700: #B21730,
+  color-primary-800: #8F0E2E,
+  color-primary-900: #77092D,
+  color-success-100: #CBFED6,
+  color-success-200: #98FDB9,
+  color-success-300: #64FBA4,
+  color-success-400: #3DF79F,
+  color-success-500: #00F397,
+  color-success-600: #00D096,
+  color-success-700: #00AE8F,
+  color-success-800: #008C81,
+  color-success-900: #007274,
+  color-info-100: #CBFEF8,
+  color-info-200: #98FDF9,
+  color-info-300: #64F6FB,
+  color-info-400: #3EE4F8,
+  color-info-500: #00C7F4,
+  color-info-600: #009BD1,
+  color-info-700: #0074AF,
+  color-info-800: #00538D,
+  color-info-900: #003C75,
+  color-warning-100: #FEF9CC,
+  color-warning-200: #FDF19A,
+  color-warning-300: #FBE667,
+  color-warning-400: #F8DA41,
+  color-warning-500: #F4C804,
+  color-warning-600: #D1A702,
+  color-warning-700: #AF8902,
+  color-warning-800: #8D6B01,
+  color-warning-900: #755600,
+  color-danger-100: #FEE8D2,
+  color-danger-200: #FECBA6,
+  color-danger-300: #FDA77A,
+  color-danger-400: #FB8558,
+  color-danger-500: #F94D22,
+  color-danger-600: #D63018,
+  color-danger-700: #B31911,
+  color-danger-800: #900A0D,
+  color-danger-900: #770611
+
 ), dark, dark);
