--- a/src/app/pages/publica/elgamal/elgamal.component.html
+++ b/src/app/pages/publica/elgamal/elgamal.component.html
@@ -1,52 +1,40 @@
 <div class="row">
   <div class="col-md-8 offset-md-2">
     <nb-card>
-      <nb-card-header>Generar claves del Sistema ElGamal (Menezes - Vanstone) - Hexadecimal</nb-card-header>
+      <nb-card-header>Generate ElGamal keys</nb-card-header>
       <nb-card-body>
         <div class="col col-md-12">
-          <label class="label">Si no tiene una clave: haga click en 'Generar Clave', después presione 'Llenar
-            Campos' y podrá cifrar y descifrar en los respectivos recuadros con la clave generada.</label>
+          <label class="label">If you do not have a key: click on 'Generate Key', then click on 'Fill Fields' and you
+            will be able to encrypt and decrypt in the respective boxes with the generated key.</label>
         </div>
         <br>
         <div class="row justify-content-around">
-          <button class="col-4" (click)="generarClave($event, model3)" nbButton status="primary">Generar Clave</button>
-          <button class="col-4" (click)="fillKey($event, model3)" nbButton status="warning">Llenar Campos</button>
+          <button class="col-4" (click)="generarClave($event, model3)" nbButton status="primary">Generate Key</button>
+          <button class="col-4" (click)="fillKey($event, model3)" nbButton status="success">Fill Fields</button>
         </div>
         <br>
-        <div class="row justify-content-around">
-          <div class="col col-md-6">
-            <label class="label">Curva Elíptica: (y &#178; = x &#179; + ax + b) mod p</label>
-          </div>
-        </div>
         <div class="row">
           <div class="col align-self-start">
             <div class="form-group col-md-8">
-              <label for="numP" class="label">Primo p (público):</label>
-              <input class="fix-width" type="number" [(ngModel)]="model3.numP" name="numP" nbInput id="numP" readonly>
+              <label for="numN" class="label">Prime p (public):</label>
+              <input class="fix-width" type="number" [(ngModel)]="model3.numP" name="numN" nbInput id="numN" placeholder="Click on 'GENERATE KEY'" readonly>
             </div>
           </div>
           <div class="col align-self-end">
             <div class="form-group col-md-8">
-              <label for="numA" class="label">Número a (público):</label>
-              <input class="fix-width" type="number" [(ngModel)]="model3.numA" name="numA" nbInput id="numA" readonly>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col align-self-start">
-            <div class="form-group col-md-8">
-              <label for="numB" class="label">Número b (público):</label>
+              <label for="numB" class="label">Number beta (public):</label>
               <input class="fix-width" type="number" [(ngModel)]="model3.numB" name="numB" nbInput id="numB" readonly>
             </div>
           </div>
-          <div class="col align-self-end">
+        </div>
+        <div class="row">
+          <div class="col align-self-start">
             <div class="form-group col-md-8">
-              <label for="numK" class="label">Número k (privado):</label>
-              <input class="fix-width" type="number" [(ngModel)]="model3.numK" name="numK" nbInput id="numK" readonly>
+              <label for="numP" class="label">Number a (private):</label> <br>
+              <input class="fix-width" type="number" [(ngModel)]="model3.numA" name="numP" nbInput id="numP" readonly>
             </div>
           </div>
         </div>
-
       </nb-card-body>
     </nb-card>
   </div>
@@ -54,57 +42,39 @@
 <div class="row">
   <div class="col-md-6">
     <nb-card>
-      <nb-card-header>Cifrar con ElGamal (Menezes - Vanstone) - Hex.</nb-card-header>
+      <nb-card-header>Encrypt with ElGamal</nb-card-header>
       <nb-card-body>
 
-        <form (ngSubmit)="cifrar(model1.textoClaro, model1.numA, model1.numB, model1.numP, model1.numK)">
+        <form (ngSubmit)="cifrar(model1.textoClaro, model1.numB, model1.numP)">
 
           <div class="form-group">
-            <label for="textoClaro" class="label">Texto Claro</label>
-            <textarea type="text" [(ngModel)]="model1.textoClaro" name="textoClaro" nbInput fullWidth id="textoClaro"
-              placeholder="Inserte el texto a cifrar. Use caracteres del alfabeto inglés."></textarea>
+            <label for="textoClaro" class="label">Plaintext</label>
+            <textarea rows="4" type="text" [(ngModel)]="model1.textoClaro" name="textoClaro" nbInput fullWidth id="textoClaro"
+              placeholder="Insert the text to be encrypted. Use English alphabet characters."></textarea>
           </div>
           <div class="row">
             <div class="col align-self-start">
-              <div class="form-group col-md-12">
-                <label for="numPC" class="label">Primo p:</label>
-                <input class="form-control" type="number" [(ngModel)]="model1.numP" name="numPC" nbInput id="numPC"
-                  placeholder="Ingrese p">
+              <div class="form-group col-md-8">
+                <label for="numN" class="label">Prime p (public):</label>
+                <input class="fix-width" type="number" [(ngModel)]="model1.numP" name="numNC" nbInput id="numNC" placeholder="Enter p">
               </div>
             </div>
             <div class="col align-self-end">
-              <div class="form-group col-md-12">
-                <label for="numAC" class="label">Número a:</label>
-                <input class="form-control" type="number" [(ngModel)]="model1.numA" name="numAC" nbInput id="numAC"
-                  placeholder="Ingrese a">
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col align-self-start">
-              <div class="form-group col-md-12">
-                <label for="numBC" class="label">Número b:</label>
-                <input class="form-control" type="number" [(ngModel)]="model1.numB" name="numBC" nbInput id="numBC"
-                  placeholder="Ingrese b">
-              </div>
-            </div>
-            <div class="col align-self-end">
-              <div class="form-group col-md-12">
-                <label for="numKC" class="label">Número k:</label>
-                <input class="form-control" type="number" [(ngModel)]="model1.numK" name="numKC" nbInput id="numKC"
-                  placeholder="Ingrese k">
+              <div class="form-group col-md-8">
+                <label for="numB" class="label">Number beta (public):</label>
+                <input class="fix-width" type="number" [(ngModel)]="model1.numB" name="numBC" nbInput id="numBC" placeholder="Enter beta">
               </div>
             </div>
           </div>
           <div class="form-group">
-            <label for="textoCifradoC" class="label">Texto Cifrado</label>
-            <textarea type="text" [(ngModel)]="model1.textoCifrado" name="textoCifradoC" nbInput fullWidth
-              id="textoCifradoC" placeholder="Oprima 'CIFRAR' para ver el texto cifrado"></textarea>
+            <label for="textoCifrado" class="label">Ciphertext</label>
+            <textarea rows="4" type="text" [(ngModel)]="model1.textoCifrado" name="textoCifrado" nbInput fullWidth
+              id="textoCifrado" placeholder="Click on 'ENCRYPT' to view the ciphertext" readonly></textarea>
           </div>
 
           <div class="buttons">
-            <button type="submit" nbButton status="primary">Cifrar</button>
-            <button (click)="clearForm1($event, model1)" nbButton status="warning">Limpiar</button>
+            <button type="submit" nbButton status="primary">Encrypt</button>
+            <button (click)="clearForm1($event, model1)" nbButton status="warning">Clean up</button>
           </div>
 
         </form>
@@ -115,57 +85,40 @@
 
   <div class="col-md-6">
     <nb-card>
-      <nb-card-header>Descifrar con ElGamal (Menezes - Vanstone) - Hex.</nb-card-header>
+      <nb-card-header>Decrypt with ElGamal</nb-card-header>
       <nb-card-body>
 
-        <form (ngSubmit)="descifrar(model2.textoCifrado, model2.numA, model2.numB, model2.numP, model2.numK)">
+        <form (ngSubmit)="descifrar(model2.textoCifrado, model2.numA, model2.numP)">
 
           <div class="form-group">
-            <label for="textoCifrado" class="label">Texto Cifrado</label>
-            <textarea type="text" [(ngModel)]="model2.textoCifrado" name="textoCifrado" nbInput fullWidth
-              id="textoCifrado" placeholder="Inserte el texto a descifrar. Use números separados por comas."></textarea>
+            <label for="textoCifrado" class="label">Ciphertext</label>
+            <textarea rows="4" type="text" [(ngModel)]="model2.textoCifrado" name="textoCifrado" nbInput fullWidth
+              id="textoCifrado"
+              placeholder="Insert the text to be decrypted. Use numbers separated by commas"></textarea>
           </div>
           <div class="row">
             <div class="col align-self-start">
-              <div class="form-group col-md-12">
-                <label for="numPD" class="label">Primo p:</label>
-                <input class="form-control" type="number" [(ngModel)]="model2.numP" name="numPD" nbInput id="numPD"
-                  placeholder="Ingrese p">
+              <div class="form-group col-md-8">
+                <label for="numN" class="label">Prime p (public):</label>
+                <input class="fix-width" type="number" [(ngModel)]="model2.numP" name="numND" nbInput id="numND" placeholder="Enter p">
               </div>
             </div>
-            <div class="col align-self-end">
-              <div class="form-group col-md-12">
-                <label for="numAD" class="label">Número a:</label>
-                <input class="form-control" type="number" [(ngModel)]="model2.numA" name="numAD" nbInput id="numAD"
-                  placeholder="Ingrese a">
-              </div>
-            </div>
-          </div>
-          <div class="row">
             <div class="col align-self-start">
-              <div class="form-group col-md-12">
-                <label for="numBD" class="label">Número b:</label>
-                <input class="form-control" type="number" [(ngModel)]="model2.numB" name="numBD" nbInput id="numBD"
-                  placeholder="Ingrese b">
-              </div>
-            </div>
-            <div class="col align-self-end">
-              <div class="form-group col-md-12">
-                <label for="numKD" class="label">Número k:</label>
-                <input class="form-control" type="number" [(ngModel)]="model2.numK" name="numKD" nbInput id="numKD"
-                  placeholder="Ingrese k">
+              <div class="form-group col-md-8">
+                <label for="numP" class="label">Number a (private):</label> <br>
+                <input class="fix-width" type="number" [(ngModel)]="model2.numA" name="numPD" nbInput id="numPD" placeholder="Enter a">
               </div>
             </div>
           </div>
           <div class="form-group">
-            <label for="textoClaroD" class="label">Texto Claro</label>
-            <textarea type="text" [(ngModel)]="model2.textoClaro" name="textoClaroD" nbInput fullWidth id="textoClaroD"
-              placeholder="Oprima 'DESCIFRAR' para ver el texto descifrado"></textarea>
+            <label for="textoClaro" class="label">Plaintext</label>
+            <textarea rows="4" type="text" [(ngModel)]="model2.textoClaro" name="textoClaro" nbInput fullWidth id="textoClaro"
+              placeholder="Click on 'DECRYPT' to view the decoded text" readonly></textarea>
           </div>
 
           <div class="buttons">
-            <button type="submit" nbButton status="primary">Descifrar</button>
-            <button (click)="clearForm1($event, model2)" nbButton status="warning">Limpiar</button>
+            <button type="submit" nbButton status="primary">Decrypt</button>
+            <button (click)="clearForm2($event, model2)" nbButton status="warning">Clean up</button>
           </div>
 
         </form>
