--- a/src/app/pages/dialogo/dialogo.component.html
+++ b/src/app/pages/dialogo/dialogo.component.html
@@ -4,6 +4,6 @@
     {{ content }}
   </nb-card-body>
   <nb-card-footer>
-    <button nbButton hero status="primary" (click)="dismiss()">Cerrar</button>
+    <button nbButton hero status="primary" (click)="dismiss()">Close</button>
   </nb-card-footer>
 </nb-card>
